--- a/front/html/cart.html
+++ b/front/html/cart.html
@@ -133,6 +133,7 @@
         </div>
       </div>
     </footer>
+  <script src="../js/utils.js"></script>
   <script src="../js/cart.js"></script>
   </body>
 </html>
