--- a/front/html/product.html
+++ b/front/html/product.html
@@ -110,6 +110,7 @@
         </div>
       </div>
     </footer>
+  <script src="../js/utils.js"></script>
   <script src="../js/product.js"></script>
   </body>
 </html>
